<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_with_backendless"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".view.MainLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_transparent" />

        <EditText
            android:id="@+id/identityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:textCursorDrawable="@drawable/text_cursor"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textCursorDrawable="@drawable/text_cursor"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center|end"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rememberLoginBox"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/poppins_semibold"
            android:outlineSpotShadowColor="@color/grey_100"
            android:buttonTint="@color/celeste"
            android:text="@string/remember_login_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/restoreLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="end"
            android:text="@string/olvidaste_password"
            android:textColor="@color/celeste" />
    </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_bg"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/iniciar_sesion"
            android:textColor="#fff"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/button_googlePlusLogin"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_bg"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:padding="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/google_logo_icon" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="¿Aún no tienes cuenta?  "
                android:textColor="#fff"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/registrate"
                android:textColor="@color/celeste"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
        